<resources>
  <string name="app_name">Seccion_4_Weather_App</string>
  <string name="no_data">No data</string>
  <string name="weather_img">weather_img</string>
  <string name="celcius_temp">%d ºC</string>
  <string name="weather_percent">%d %%</string>
  <string name="lbl_temp">Temp</string>
  <string name="lbl_precip">Precip</string>
  <string name="btn_title_daily_weather">Daily weather</string>
  <string name="btn_title_hourly_weather">Hourly weather</string>
  <string name="languaje">en</string>
  <string name="units">si</string>
  <string name="network_error">NETWORK ERROR</string>
  <string name="retry">RETRY</string>
  <string name="week_summary">Summary of the week</string>
  <string name="hourly_weather">Hourly Weather</string>
  <string name="summary_of_the_day">Summary of the day</string>
</resources>
