<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    >

  <ImageView
      android:id="@+id/img_weather_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:contentDescription="@string/weather_img"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/na"
      />
  <TextView
      android:id="@+id/txt_weather"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/no_data"
      android:textAlignment="center"
      android:textSize="32sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/img_weather_icon"
      tools:text="Clear Day"
      />
  <TextView
      android:id="@+id/txt_city"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:textSize="32sp"
      app:layout_constraintBottom_toTopOf="@+id/img_weather_icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:text="Bogotá, Colombia"
      />
  <android.support.constraint.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5"
      />
  <TextView
      android:id="@+id/txt_temp"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/celcius_temp"
      android:textAlignment="center"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_weather"
      tools:text="24 C"
      />
  <TextView
      android:id="@+id/txt_weather_percent"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/weather_percent"
      android:textAlignment="center"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toBottomOf="@+id/txt_weather"
      />
  <TextView
      android:id="@+id/textView5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/lbl_temp"
      android:textAlignment="center"
      android:textSize="12sp"
      app:layout_constraintBottom_toTopOf="@+id/txt_temp"
      app:layout_constraintEnd_toStartOf="@+id/guideline2"
      app:layout_constraintStart_toStartOf="parent"
      />
  <TextView
      android:id="@+id/textView6"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:lineSpacingExtra="12sp"
      android:text="@string/lbl_precip"
      android:textAlignment="center"
      app:layout_constraintBottom_toTopOf="@+id/txt_weather_percent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      />
  <Button
      android:id="@+id/btn_daily_weather"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/btn_title_daily_weather"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/guideline2"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/Widget.AppCompat.Button.Borderless"
      />
  <Button
      android:id="@+id/btn_hourly_weather"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/btn_title_hourly_weather"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn_daily_weather"
      style="@style/Widget.AppCompat.Button.Borderless"
      />
</android.support.constraint.ConstraintLayout>